# web-libusb

./: .gitignore  Cargo.toml
demo/: package.json  tsconfig.json  vue.config.js
demo/src/: devices.ts  impl.ts  shims-vue.d.ts  usb.worker.ts  workerManager.ts
demo/src/views/: Home.vue
wasm-libc/: Cargo.toml
wasm-libc/src/: lib.rs
web-libnspire/: Cargo.toml
web-libnspire/src/: lib.rs
web-libusb/: build.rs
web-libusb/include/: stdint.h
web-libusb/src/: alloc.rs  lib.rs  misc.rs  msgs.rs  structs.rs
web-link/: Cargo.toml
web-link/src/: lib.rs
