[package]
name = "web-link"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ["DedicatedWorkerGlobalScope"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1.3"
rmp-serde = "0.14.4"
libusb1-sys = "0.4.2"
libnspire-sys = "0.3.2"
libnspire = "0.2.3"
rusb = "0.6.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
[dev-dependencies]
wasm-bindgen-test = "0.3.13"
